testsuite/tests/indexed-types/should_fail/T4099.stderr
T4099.hs:11:30: error: [GHC-83865]
    • Couldn't match expected type: T a0
                  with actual type: T b
      Note: ‘T’ is a non-injective type family.
      The type variable ‘a0’ is ambiguous
    • In the second argument of ‘foo’, namely ‘x’
      In the expression: foo (error "urk") x
      In an equation for ‘bar1’: bar1 a x = foo (error "urk") x
    • Relevant bindings include
        x :: T b (bound at T4099.hs:11:8)
        a :: b (bound at T4099.hs:11:6)
        bar1 :: b -> T b -> Int (bound at T4099.hs:11:1)

T4099.hs:14:30: error: [GHC-83865]
    • Couldn't match expected type: T a1
                  with actual type: Maybe b
      The type variable ‘a1’ is ambiguous
    • In the second argument of ‘foo’, namely ‘x’
      In the expression: foo (error "urk") x
      In an equation for ‘bar2’: bar2 a x = foo (error "urk") x
    • Relevant bindings include
        x :: Maybe b (bound at T4099.hs:14:8)
        a :: b (bound at T4099.hs:14:6)
        bar2 :: b -> Maybe b -> Int (bound at T4099.hs:14:1)

